Update RatingServiceUnitTests.java